force-app/main/default/objects/OpportunityLineItem/fields/BattleHistory__c.field-meta.xml
<CustomField>
    <fullName>BattleHistory__c</fullName>
    <description
  >Keeps battle history for the player in JSON format</description>
    <label>Battle History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>