force-app/main/default/objects/OpportunityLineItem/fields/IsWinner__c.field-meta.xml
<CustomField>
    <fullName>IsWinner__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates if this particular model instance is among the winners of the battle.</description>
    <label>Is Winner</label>
    <type>Checkbox</type>
</CustomField>