force-app/main/default/objects/OpportunityLineItem/fields/NumberOfLives__c.field-meta.xml
<CustomField>
    <fullName>NumberOfLives__c</fullName>
    <description
  >Remaining lives for the player. Cannot be negative</description>
    <label>Number of Lives</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>