force-app/main/default/objects/OpportunityLineItem/fields/PlayerId__c.field-meta.xml
<CustomField>
    <fullName>PlayerId__c</fullName>
    <description
  >External Id in order to be able to migrate data consistently.</description>
    <displayFormat>Player-{000000}</displayFormat>
    <externalId>true</externalId>
    <label>Player Id</label>
    <type>AutoNumber</type>
</CustomField>