force-app/main/default/objects/OpportunityLineItem/fields/ScorePoints__c.field-meta.xml
<CustomField>
    <fullName>ScorePoints__c</fullName>
    <description
  >Number of score points taken into account for statistics. Lost players&apos; scores do not count.</description>
    <formula>IF(IsWinner__c, Score__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>